--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.17.1",
     "node-cron": "^4.2.1",
-    "web3": "^4.16.0"
+    "web3": "^4.16.0",
+    "web3-validator": "^2.0.6"
   }
 }
